# oplib-optimize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: project report.docx
example/: CMakeLists.txt  Makefile  benchmark_gemm1.c  benchmark_net_conv2d_relu_pooling_fuse.c  benchmark_net_conv2d_relu_pooling_nofuse.c  benchmark_testcase.h  example_conv2d.c  example_conv2d.cpp  example_main.c
include/: npu_instr_encode.h  npu_instr_gen.h  npu_instr_list.h  npu_reg_def.h  oplib_common.h  oplib_conv2d.h  oplib_interface.h
lib/: CMakeLists.txt  oplib_common.c  oplib_common.cpp  oplib_conv2d.c  oplib_conv2d.cpp  oplib_conv_relu_pooling.c  oplib_conv_relu_pooling.cpp  oplib_elementwise.c  oplib_elementwise.cpp  oplib_layer_conv2d.c  oplib_layer_conv_relu_pooling.c  oplib_layer_elementwise.c  oplib_layer_pooling.c  oplib_matrix.c  oplib_pooling.c  oplib_pooling.cpp  testbench_encode_mtx.cpp  testbench_encode_spc.cpp  testbench_encode_vec.cpp
lib/include/: testbench_encode_mtx.hpp  testbench_encode_spc.hpp  testbench_encode_vec.hpp
test/: CMakeLists.txt  test_encode_mtx.cpp  test_encode_spc.cpp  test_encode_vec_algebra.cpp  test_encode_vec_compare.cpp  test_encode_vec_logic.cpp  test_encode_vec_mask.cpp  test_encode_vec_permutation.cpp  test_encode_vec_shift.cpp  test_oplib_conv2d.cpp  test_oplib_layer_conv2d.cpp  test_oplib_layer_conv_relu_pooling.cpp  test_oplib_layer_pooling.cpp  test_oplib_layer_relu.cpp  test_oplib_layer_testcase.h
